# PHYS-720-Computational-Physics

./: .gitignore  CMakeLists.txt
include/: Derivatives.h  EigenFinder.h  EigenFinders.h  Integration.h  Interpolation.h  LinearSystems.h  RootFinders.h  ThreadedIntegration.h  main.h  tests.h
source/: CMakeLists.txt  Derivatives.cpp  EigenFinder.cpp  EigenFinders.cpp  Integration.cpp  Interpolation.cpp  LinearSystems.cpp  RootFinders.cpp  ThreadedIntegration.cpp  main.cpp  tests.cpp
